update tree view,create teamMatchDetails,views(update index,create teams)

--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -9,7 +9,7 @@
                 Rank
             </li>
         </a>
-        <a class="header__menu--link" href="">
+        <a class="header__menu--link" href="/api/v1/team">
             <li class="header__menu--item">
                 Teams
             </li>
