--- a/backend/public/css/base.css
+++ b/backend/public/css/base.css
@@ -77,6 +77,13 @@ body{
     display: flex;
     transition: transform 0.5s ease;
   }
+  .slides__img {
+    display: none;
+}
+
+.slides__img.active {
+    display: block;
+}
   .content__title{
     color: #fff;
   }
@@ -111,3 +118,120 @@ body{
   .content{
     margin: 540px 0px 20px 0px;
   }
+.content__title{
+    color: red;
+    font-size: 20px;
+    margin: 16px 0px;
+    font-weight: 500;
+} 
+.content__title--sub{
+    color: #fff;
+    font-size: 14px;
+    width: 80%;
+    line-height: 1.5;
+}
+.content__team--famous{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.content__team--famous__content{
+    width: 26%;
+    background-color: rgb(53, 44, 44);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 20px;
+    padding-bottom: 20px;
+}
+.content__team--famous__title{
+    color:red;
+    text-align: center;
+    font-size: 17px;
+    font-weight: 500;
+}
+.content__team--famous__img{
+    width: 80%;
+    height: auto;
+    margin: 20px auto;
+}
+.content__team--famous__bodytext{
+    padding: 0px 20px;
+}
+.content__team--famous__name{
+    font-size: 18px;
+    font-weight: 500;
+    color: red;
+}
+.content__team--famous__stadium{
+    color: #e7e6e6;
+    margin: 6px 0px;
+    font-size: 16px;
+}
+.content__team--famous__history{
+    color: #cabfbf;
+    font-size: 14px;
+    line-height: 1.3;
+}
+.team-name{
+    color: #fff;
+}
+/* CSS for Teams */
+.teams__body--title{
+    font-size: 20px;
+    color: red;
+    text-align: center;
+    font-weight: 600;
+}
+.teams_content{
+    display: flex;
+    flex-wrap: wrap;
+}
+.teams_content__boxitem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(53, 44, 44);
+    border-radius: 16px;
+    padding: 0px 0px 10px ;
+    margin-right: 20px;
+}
+.teams_content__boxitem--img{
+    padding: 20px 22px 10px;
+    width: 118px;
+    height: 130px;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+}
+.teams_content__link{
+    text-decoration: none;
+}
+.teams_content__boxitem--name{
+    color: #ccc;
+}
+.teams_search{
+    width: 240px;
+    border: none;
+    height: 100%;
+    padding-left: 16px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.teams_search:focus{
+    outline: none;
+}
+.teams_search_containt{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    height: 32px;
+    margin: 24px 0px;
+}
+.teams_search--icon{
+}
+.teams_search_box--icon{
+    background-color: red;
+    padding: 1.5px 6px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
