--- a/backend/public/css/base.css
+++ b/backend/public/css/base.css
@@ -271,8 +271,11 @@ body{
     border-radius: 4px;
     cursor: pointer;
     flex: 0 0 auto;
+    margin: 0 10px 0 10px;
 }
-
+.season-span{
+    margin: 0 25px 0 25px;
+}
 .season-detail-btn:hover {
     background-color: red;
 }
@@ -369,4 +372,7 @@ body{
     color: red;
     font-size:30px;
     margin: 10px 0 10px 0;
+}
+#search-results{
+    color: white;
 }
