--- a/backend/views/pages/newseason.ejs
+++ b/backend/views/pages/newseason.ejs
@@ -20,9 +20,10 @@
                     <label for="yearEnd">Year End:</label>
                     <input type="number" id="yearEnd" name="yearEnd" required>
                     <button type="submit">Create Season</button>               
-                    <button type="button" onclick="addTeam()">Thêm Team</button>
+                    <button type="button" onclick="addTeam()" id ="addTeam">Thêm Team</button>
                 </form>
             </div>
+            <div id="teamFormContainer"></div>
             <!-- Hiển thị danh sách đội bóng -->
             <div class="team-list">
                 <h3></h3>
