xong cái thêm match r mà ta đang render về json chưa làm cái list match

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="center">
         <div class="w-1080">
-            <%- include ('header') %>
+            <%- include ('partials/header') %>
             <div class="slider">
                 <div class="slides">
                   <img class="slides__img active"src="/img/slider1.jpg" alt="Image 1">
@@ -27,6 +27,6 @@
         </div>
     </div>
     </div>
-        <%- include ('footer') %> 
+        <%- include ('partials/footer') %> 
 </body>
 </html>
