--- a/backend/views/partials/footer.ejs
+++ b/backend/views/partials/footer.ejs
@@ -1,3 +1,8 @@
+<style>
+    .footer{
+        margin-top: 50%;
+    }
+</style>
 <footer class="footer">
     <p class="footer__title">© 2016 Company, Inc</p>
 </footer>
