--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -19,7 +19,7 @@
                 Teams
             </li>
         </a>
-        <a class="header__menu--link" href="api/v1/season/">
+        <a class="header__menu--link" href="/api/v1/season">
             <li class="header__menu--item">
                 Match
             </li>
