--- a/backend/public/css/addMatch.css
+++ b/backend/public/css/addMatch.css
@@ -14,7 +14,7 @@
 .match-form input[type="text"],
 .match-form input[type="datetime-local"],
 .match-form select {
-    width: calc(50% - 10px);
+    width: calc(100% - 10px);
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -34,6 +34,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    
 }
 
 .match-form button[type="submit"]:hover {
@@ -44,6 +45,25 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 20px;
+}
+
+.input-description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.match-form textarea[type="text"] {
+    width: 1000px;
+    height: 200px;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .input-container > div {
