xong het ko bug

--- a/backend/views/pages/season.ejs
+++ b/backend/views/pages/season.ejs
@@ -53,7 +53,7 @@
     </div>
   </div>
   </div>
-  <script src="../../script/season.js"></script>
+  <script src="/script/season.js"></script>
 </body>
 
 </html>
