--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -14,7 +14,7 @@
                 Teams
             </li>
         </a>
-        <a class="header__menu--link" href="">
+        <a class="header__menu--link" href="/api/v1/teammatch">
             <li class="header__menu--item">
                 Match
             </li>
