--- a/backend/public/css/base.css
+++ b/backend/public/css/base.css
@@ -12,6 +12,41 @@ body{
 .w-960{
     width: 960px;
 }
+.mg-btm-10{
+    margin-bottom: 10px;
+}
+.space--beetwen{
+    width: 60px;
+}
+.mg-r-30{
+    margin-right: 30px;
+}
+.pd-r-60{
+    padding-right: 60px;
+}
+.w-50-percent{
+    width: 50%;
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+table {
+    border-collapse: collapse;
+    border: 2px solid grey; /* đặt độ dày và màu sắc cho viền */
+    width: 100%;
+}
+th {
+    border: 1px solid grey; /* đặt viền cho cell bên trong */
+    padding: 8px;
+    text-align: left;
+}
+td{
+    padding: 10px;
+    position: relative; /* Thiết lập phần tử td làm khung chứa cho pseudo-element */
+    border-right: 1px solid grey;
+}
 .hello{
     color: red;
 }
@@ -234,4 +269,64 @@ body{
     padding: 1.5px 6px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+.match__body--team__img{
+    height: 46px;
+    width: 50px;
+    border-radius: 50%;
+}
+/* Match */
+.match__table--heading{
+    text-align: left;
+    color: #fff;
+    padding: 10px 0px 10px 30px;
+}
+.matchteam_body--date{
+    margin: 20px 0px;
+}
+.match__seasonSelect{
+    float: right;
+    font-size: 14px;
+    text-align: center;
+    font-weight: 600;
+    background-color: rgb(53, 44, 44);
+    color: #ffff;
+}
+.match__season{
+    margin: 20px 0px;
+}
+.matchteam_body{
+    margin-top: 60px;   
+}
+.match__body{
+    background-color: rgb(53, 44, 44);
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px 10px 30px;
+    border-radius: 10px;
+}
+.match__body--team{
+    display: flex;
+    align-items: center;
+}
+.match__body--team__name{
+    margin: 0px 30px ;
+    width: 200px;
+}
+.match__body--team__icon{
+    font-size: 18px;
+    color: #fff;
+}
+.match__body--status{
+    text-align: center;
+}
+.match__body--status-title{
+    margin-bottom: 6px;
+}
+.match__body--status-date{
+    color: grey;
+}
+.table__matchteam--body{
+    text-decoration: none;
+    padding: 14px 106px 14px 20px;
 }
