--- a/backend/views/pages/teaminseason.ejs
+++ b/backend/views/pages/teaminseason.ejs
@@ -18,13 +18,13 @@
             </div>
           <!-- Hiển thị danh sách đội bóng -->
           <div class="team-list">
-            <h3>Danh sách đội bóng:</h3>
+        
             <ul>
                 <% data.teams.forEach(function(team) { %>
                     <li>
                         <img src="<%= team.logo %>" alt="<%= team.name %> Logo">
                         <span><%= team.name %></span>
-                        <a href="link_to_team_details" class="view-button">Xem</a>
+                        <a href="/api/v1/team/<%= team._id %>/players" class="view-button">Xem</a>
                     </li>
                 <% }); %>
             </ul>
