--- a/backend/views/pages/newseason.ejs
+++ b/backend/views/pages/newseason.ejs
@@ -52,10 +52,31 @@
           <textarea id="description" name="description"class="CreateTeam" rows="4"></textarea>
           <br>
           <button type="button" onclick="hideModal()">Back</button>
-          <button class="buttonAddTeam" onclick="createTeam()">Thêm</button>
+          <button type="button" onclick="showModalPlayer()">Next</button>
         </form>
+      </div>
+      <div class="modalListPlayer" style="display: none;">
+        <div class="addListPlayer">
+          <div class="player-team-side">
+            <h3 class="player-heading">Player in Team</h3>
+            <ul class="teamPlayerListModal">
+              <!-- Danh sách cầu thủ trong team sẽ được hiển thị ở đây -->
+            </ul>
+          </div>
+          <div class="divider"></div>
+          <div class="player-free-side">
+            <h3 class="player-heading">Free Players</h3>
+            <ul class="playerListModal">
+              <!-- Danh sách cầu thủ tự do sẽ được hiển thị ở đây -->
+            </ul>
+          </div>
+        </div>
+        <div class="modal-buttons">
+          <button type="button" onclick="hideModalListPlayer()">Back</button>
+          <button type="button" onclick="addTeam()">Thêm</button>
         </div>
       </div>
+      
       <div id="teamFormContainer"></div>
       <!-- Hiển thị danh sách đội bóng -->
       <div class="team-list">
